破局期間の残り日数を返すようにする
